--- a/templates/survey/thanks.html
+++ b/templates/survey/thanks.html
@@ -18,9 +18,8 @@
 {% endblock %}
 
 {% block col1 %}
-
 <p>{% trans "Thanks for taking the time to fill out this survey." %}</p>
-
+Mobile user: {{ mobile }}
 <!--<p>
 {% trans "Here is a summary of the information you entered for you and the members of your group or family:" %}
 </p>-->
