1) Show ID code's form after activation if applicable. 2) Add field for date of birth on id code's form. Checked against any existing value from SCB, if there is no stored value specified us entered value. 3) Function to update / create new survey responses depending on the desired functionality. 4) Add the functionality to update/create weekly poll depending on current week. 5)Transfer the birth date to the weekly survey / background questionnaire. Possibly to hidden field depending on what is required 6) Mobile Accessibility to my account 7) Tidying up a bit.

--- a/templates/base/sitebase.html
+++ b/templates/base/sitebase.html
@@ -49,8 +49,7 @@
 
 	</head>
 
-	<body{% spaceless %}{% block add_body %}{% endblock add_body %}{% endspaceless %} onLoad="determineDevice()">
-    <div id="device_used" style="display: none">Type not determined</div>
+	<body{% spaceless %}{% block add_body %}{% endblock add_body %}{% endspaceless %}">
 	<div id="page">
 		<div id="influenzabar">
 			{% block masthead %}
