--- a/templates/base/mobile_bootstrap.html
+++ b/templates/base/mobile_bootstrap.html
@@ -36,6 +36,7 @@
 
     <body {% spaceless %}{% block add_body %}{% endblock add_body %}{% endspaceless %}>
         {% block content %}{% endblock content %} 
+        {% block col1 %}{% endblock col1 %}
     </body>
 
 </html>
