--- a/templates/pollster/questions_run.html
+++ b/templates/pollster/questions_run.html
@@ -1,6 +1,8 @@
 {% load i18n %}
-<form class="survey {% if survey.form.errors %}error{% endif %}" id="survey-{{ survey.id }}" method="POST">
+
+<form class="survey {% if survey.form.errors %}error{% endif %}" id="survey-{{ survey.id }}" method="POST">    
     {% csrf_token %}
+    <input name="fodelsedatum" id="fodelsedatum" disabled value="{{ idcode.fodelsedatum }}"/>
     <!--<div class="survey-message">
         {% trans "Questionnaire for participant" %} {{ person }}
     </div>-->
