--- a/templates/survey/thanks.html
+++ b/templates/survey/thanks.html
@@ -1,4 +1,5 @@
-{% extends "base/twocol.html" %}
+{# extends "base/twocol.html" #}
+{% extends base_template %}
 
 {% load i18n sekizai_tags %}
 
@@ -17,9 +18,17 @@
 </script>
 {% endblock %}
 
+
+{% if mobile %}
+
+{% else %}
+
+{% endif %}
+
+
 {% block col1 %}
+
 <p>{% trans "Thanks for taking the time to fill out this survey." %}</p>
-Mobile user: {{ mobile }}
 <!--<p>
 {% trans "Here is a summary of the information you entered for you and the members of your group or family:" %}
 </p>-->
@@ -45,10 +54,21 @@ Vi hoppas att du kan rapportera varje vecka, oavsett om du är frisk eller sjuk.
 All information hjälper oss att få koll på influensaläget i Sverige!
 {% endif %}
 
-<table class="imagetable">
+{% if mobile %}
+<table class="table table-striped table-bordered table-condensed">
 <tr>
-	
-<!--    <th colspan="2">{% trans "Health status" %}</th>-->
+<th>{% trans "Group members" %}</th>
+<td>{{ person.name }}<br/><a href="{{ person.get_edit_url }}">{% trans "Change name" %}</a></td>
+</tr>
+<tr>
+<th>{% trans "Manage " %}</th>
+<td><a href="{{ person.get_profile_url }}">{% trans "Change profile" %}</a><br/>
+<a href="{{ person.get_survey_url }}">{% trans "Enter symptoms" %}</a></td>
+</tr>
+{% else %}
+<table class="imagetable" style="width:400px;">
+<tr>
+<!--<th colspan="2">{% trans "Health status" %}</th>-->
    <th colspan="2">{% trans "Group members" %}</th>
     <!--<th colspan="2">{% trans "Manage " %}</th>-->
 {% if persons|length > 1 %}
@@ -56,7 +76,7 @@ All information hjälper oss att få koll på influensaläget i Sverige!
 {% else %}
     <th colspan="2">{% trans "Manage " %}</th>
 {% endif %}
-   <th colspan="2">Datum för senaste rapport</th>
+   <!--<th colspan="2">Datum för senaste rapport</th>-->
 </tr>
 {% for person in persons %}
 <tr><td>{{ person.name }}</td>
@@ -68,16 +88,16 @@ All information hjälper oss att få koll på influensaläget i Sverige!
 {% if persons|length > 1 %}
         <td><a href="{{ person.get_remove_url }}">{% trans "Remove" %}</a></td>
 {% endif %}
-
+<!--
     <td>
     {% for h in person.health_history %}
-        {{ h.timestamp }} <!--/ {{ h.status }} / {{ h.diag }}--><br>
+        {{ h.timestamp }} / {{ h.status }} / {{ h.diag }}<br>
     {% endfor %}
     </td>
-
+-->
 </tr>
-
 {% endfor %}
+{% endif %}
 </table>
 
 {% if messages %}
@@ -94,6 +114,35 @@ All information hjälper oss att få koll på influensaläget i Sverige!
 
 <br/>
 
+{% if mobile %}
+<table class="table table-striped table-bordered table-condensed">
+{% else %}
+<table class="imagetable" style="width:400px;">
+{% endif %}
+<thead>
+<tr>
+    <th>{% trans "Fill out date" %}</th>
+    {% if multi_profile_allowed == 'true' %}
+    <th>{% trans "Member" %}</th>
+    {% endif %}
+    <th colspan="2">{% trans "Health status" %}</th>
+</tr>
+</thead>
+<tbody>
+{% for item in history reversed %}
+<tr>
+    <td title="{{ item.timestamp }}">{{ item.timestamp|date:'SHORT_DATE_FORMAT' }}</td>
+    {% if multi_profile_allowed == 'true' %}
+    <td>{{ item.person.name }}</td>
+    {% endif %}
+    <td>{{ item.diag }}</td>
+    <td><img class="diag-icon" src="{{ MEDIA_URL }}/survey/img/diag-{{ item.status|default:'UNKNOWN' }}-small.png"/></td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+
+<!--
 <ul class="diag">
 {% for person in persons %}
 {% if person.health_history %}
@@ -102,8 +151,8 @@ All information hjälper oss att få koll på influensaläget i Sverige!
     <ul>
     {% for item in person.health_history %}
     <li class="diag-item diag-{{ item.status|default:'UNKNOWN' }}">
-    	<!--alt="{{ item.diag }}:"-->
-        <!--<img class="diag-icon" src="{{ MEDIA_URL }}/survey/img/diag-{{ item.status|default:'UNKNOWN' }}.png" alt="{{ item.diag }}:" title="{{ item.diag }}"/>-->
+    	<alt="{{ item.diag }}:">
+        <img class="diag-icon" src="{{ MEDIA_URL }}/survey/img/diag-{{ item.status|default:'UNKNOWN' }}.png" alt="{{ item.diag }}:" title="{{ item.diag }}"/>
 	<img class="diag-icon" src="{{ MEDIA_URL }}/survey/img/diag-COMMON-COLD.png"/>
         <span title="{{ item.timestamp }}" class="diag-timestamp">
             <font size="2">{{ item.timestamp|date:'SHORT_DATE_FORMAT' }}</font>
@@ -115,7 +164,7 @@ All information hjälper oss att få koll på influensaläget i Sverige!
 {% endif %}
 {% endfor %}
 </ul>
-
+-->
 <br/>
 
 <div class="survey-chart">
@@ -129,26 +178,6 @@ All information hjälper oss att få koll på influensaläget i Sverige!
 
 
 <br/>
-<!--
-<table class="imagetable">
-<thead>
-<tr>
-    <th>{% trans "Fill out date" %}</th>
-    <th>{% trans "Member" %}</th>
-    <th colspan="2">{% trans "Health status" %}</th>
-</tr>
-</thead>
-<tbody>
-{% for item in history reversed %}
-<tr>
-    <td title="{{ item.timestamp }}">{{ item.timestamp|date:'SHORT_DATE_FORMAT' }}</td>
-    <td>{{ item.person.name }}</td>
-    <td>{{ item.diag }}</td>
-    <td><img class="diag-icon" src="{{ MEDIA_URL }}/survey/img/diag-{{ item.status|default:'UNKNOWN' }}-small.png"/></td>
-</tr>
-{% endfor %}
-</tbody>
-</table>
--->
+
 {% endblock %}
 
