--- a/templates/survey/thanks_profile.html
+++ b/templates/survey/thanks_profile.html
@@ -1,4 +1,5 @@
-{% extends "survey/base.html" %}
+{# extends "survey/base.html" #}
+{% extends base_template %}
 {% load i18n %}
 
 {% block col1 %}
