--- a/templates/survey/id_code.html
+++ b/templates/survey/id_code.html
@@ -1,11 +1,11 @@
-{# extends "survey/base.html" #}
-{% extends base_template %}
+{% extends "survey/base.html" %}
 {% load i18n %}
 
 {% block col1 %}
 
 Du kommer till denna sida eftersom du inte angivit någon id-kod. Var god ange den kod du fått på din inbjudan! 
 Ange även ditt födelsedatum i formatet YYYY-MM!
+
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
