--- a/templates/survey/thanks_profile.html
+++ b/templates/survey/thanks_profile.html
@@ -1,5 +1,4 @@
-{# extends "survey/base.html" #}
-{% extends base_template %}
+{% extends "survey/base.html" %}
 {% load i18n %}
 
 {% block col1 %}
