manually merged back reverted changes

--- a/templates/registration/registration_explanation.html
+++ b/templates/registration/registration_explanation.html
@@ -5,7 +5,7 @@
 
 {% block col1 %}
 {% placeholder "Main content" %}
-
+{{ mobile }}
 <h1>{% trans "Registration Form" %}</h1>
 <p>{% trans "register" %}</p>
     <div>
