halsorapport.se and menu color

--- a/media/base/css/default.css
+++ b/media/base/css/default.css
@@ -485,7 +485,7 @@ ul.map_buttons li {
 #menubar li.selected,
 #menubar li.ancestor {
  padding: 0 0px 0 0px; 
- background: #d30044;
+ background: #9900ab;
  font-weight: bold;
  color: #ffffff;
 }
