--- a/templates/base/influhome.html
+++ b/templates/base/influhome.html
@@ -27,7 +27,7 @@
 						<a href="http://www.aktivgegengrippe.ch/" rel="external"><img src="{{ MEDIA_URL }}base/img/influbar/map/participant_ch.gif" alt="http://preview.aktivgegengrippe.ch/" title="http://preview.aktivgegengrippe.ch/" /></a><br />Switzerland<br />{% member_count "ch" %} Participants<br /><a href="http://www.aktivgegengrippe.ch/" rel="external">Visit partnersite</a>
 					</div>
 					<div class="point se" id="p-590-452" title="Sverige: Hälsorapport">
-						<a href="http://www.halsorapport.se/" rel="external"><img src="{{ MEDIA_URL }}base/img/influbar/map/participant_se.gif" alt="http://www.influensakoll.se/" title="http://www.influensakoll.se/" /></a><br />Sweden<br />{% member_count "se" %} Participants<br /><a href="http://www.influensakoll.se/" rel="external">Visit partnersite</a>
+						<a href="http://www.halsorapport.se/" rel="external"><img src="{{ MEDIA_URL }}base/img/influbar/map/participant_se.gif" alt="http://www.halsorapport.se/" title="http://www.halsorapport.se/" /></a><br />Sweden<br />{% member_count "se" %} Participants<br /><a href="http://www.halsorapport.se/" rel="external">Visit partnersite</a>
 					</div>
 					<div class="point uk" id="p-376-510" title="United Kingdom: Flusurvey">
 						<a href="http://flusurvey.org.uk/" rel="external"><img src="{{ MEDIA_URL }}base/img/influbar/map/participant_uk.gif" alt="http://flusurvey.org.uk/" title="http://flusurvey.org.uk/" /></a><br />United Kingdom<br />{% member_count "uk" %} Participants<br /><a href="http://flusurvey.org.uk/" rel="external">Visit partnersite</a>						
