--- a/apps/reminder/templates/reminder/message.html
+++ b/apps/reminder/templates/reminder/message.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>{{ site_name }} mail</title>
 </head>
-<body style="padding:0; margin:0; background:#999999; -webkit-text-size-adjust:none;">
+<body style="padding:0; margin:0; background:#ffffff; -webkit-text-size-adjust:none;">
 	
 	<style type="text/css">
 	<!--
