fixes after latest tests (20131024)

--- a/templates/registration/boxbase.html
+++ b/templates/registration/boxbase.html
@@ -8,11 +8,11 @@
 
 {% block content %}<h1>{% trans "Login" %}</h1>
 {% if messages %}
-<ul class="messages">
+<ul class="messagelist">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
                 <p>{% trans "Enter your username and password to log in." %} <a href="{% url django.contrib.auth.views.password_reset %}">{% trans "Forgot your password?" %}</a></p>
-                {% spaceless %}<form method="post" action="?next=/survey/" id="login">{% csrf_token %}{{ form.as_p }}<p><input type="submit" id="boxsubmit" value="{% trans "Log in" %}" /></p></form>{% endspaceless %}{% endblock content %}
+                {% spaceless %}<form method="post" id="login">{% csrf_token %}{{ form.as_p }}<p><input type="submit" id="boxsubmit" value="{% trans "Log in" %}" /></p></form>{% endspaceless %}{% endblock content %}
