--- a/templates/survey/id_code.html
+++ b/templates/survey/id_code.html
@@ -6,7 +6,7 @@
 <p>
 Tack för att du aktiverat ditt konto i Hälsorapport! Var vänlig fyll i den 
 kod som står tryckt på din inbjudan. Ange även födelsedatumet på den som anmälts till Hälsorapport i 
-formatet ÅÅÅÅ-MM<br/><br/>
+formatet ÅÅÅÅ-MM.<br/><br/>
 </p>
 {% if messages %}
 <ul class="messages">
