--- a/templates/survey/thanks.html
+++ b/templates/survey/thanks.html
@@ -45,7 +45,9 @@ Samma sak gäller alla profiler - all information hjälper oss att få koll på 
 <a href="/survey/people/add/"> Lägg till profil </a>
 </p>
 {% else %}
-På denna sida kan du rapportera för veckan som varit, uppdatera bakgrundsenkäten, och ändra kontonamn. Nedanför i din hälsologg kan du också se hur du rapporterat.
+På denna sida kan du rapportera för veckan som varit och uppdatera bakgrundsenkäten. 
+Nedanför i din hälsologg kan du också se hur du rapporterat. Om du vill uppdatera din rapport för veckan 
+som varit kan du klicka på Rapportera i tabellen för att ändra dina svar. 
 {% endif %}
 
 {% if mobile %}
