--- a/media/custom/css/custom.css
+++ b/media/custom/css/custom.css
@@ -7,7 +7,7 @@ Placeholder for custom css
 html body {
  font-family: Verdana, Geneva, sans-serif;
  line-height: 1.2em;
- font-size: 1.3em;
+ font-size: 1.2em;
  -webkit-text-size-adjust: none;
  color: #000000;
  background: #d5d5d5;
@@ -25,7 +25,7 @@ table.imagetable th {
 #menubar li.selected,
 #menubar li.ancestor {
  padding: 0 0px 0 0px; 
- background: #51BFE2;
+ background: #0085b0;
  font-weight: bold;
  color: #ffffff;
 }
