--- a/templates/pollster/survey_run.html
+++ b/templates/pollster/survey_run.html
@@ -14,7 +14,7 @@
 <div id="wok-main-panel-content">
 
 {% if messages %}
-<ul class="messages">
+<ul class="messagelist">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
