--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -6,4 +6,4 @@
 {% block content %}<h1>{% trans "Account Activation" %}</h1>
                 <p>{% trans "Activation is complete." %}</p>
                 <p>&nbsp;</p>
-                <p><a href="/">{% trans "Back to the home page" %}</a> {% trans "or" %} <a href="/accounts/login/">{% trans "proceed to the login page" %}</a>.</p>{% endblock content %}
+                <p><a href="/accounts/login/">{% trans "proceed to the login page" %}</a>.</p>{% endblock content %}
