--- a/templates/base/mobile_bootstrap.html
+++ b/templates/base/mobile_bootstrap.html
@@ -20,6 +20,7 @@
 
        
         <link rel="stylesheet" type="text/css" href="/media/survey/bootstrap.css"/>
+        <link rel="stylesheet" type="text/css" href="/media/survey/bootstrap_custom.css"/>
 
 		<script type="text/javascript" src="/media/base/js/jquery-1.5.1.min.js"></script>
 		<script type="text/javascript" src="/media/base/js/influenzanet.js"></script>
