--- a/media/custom/css/custom.css
+++ b/media/custom/css/custom.css
@@ -14,7 +14,7 @@ html body {
 }
 
 table.imagetable th {
- background: #51BFE2;
+ background: #0085B0;
  color: #FFFFFF;
  border-width: 1px;
  padding: 8px;
@@ -28,4 +28,34 @@ table.imagetable th {
  background: #0085b0;
  font-weight: bold;
  color: #ffffff;
+}
+
+/* Influenzabar (moved to footer) */
+#influenzabar {
+	background-image: url("../img/influbar.gif");
+}
+
+#influenzabar img {
+	margin: 0;
+	display: inline;
+}
+
+#influenzabar p.toggle {
+	background-image: url("../img/influbar-closed.gif");
+}
+
+#influenzabar p.expanded {
+	background-image: url("../img/influbar-opened.gif");
+}
+
+#footer #influenzabar .toggle a {
+	color: #C8C8C8;
+	font-size: 11px;
+	font-weight: normal;
+}
+
+div.influenzabarcontent {
+	width: 950px;
+	border-left: none;
+	border-right: none;
 }
