Additional small changes to translations and wordings.

--- a/templates/survey/id_code.html
+++ b/templates/survey/id_code.html
@@ -5,7 +5,7 @@
 {% block col1 %}
 <p>
 Tack för att du aktiverat ditt konto i Hälsorapport! Var vänlig fyll i den 
-kod som står tryckt på din inbjudan. Ange även födelsedatumet på den som anmälts till Hälsorapport i 
+kod som står tryckt på inbjudan. Ange även födelsedatumet på den som bjudits in till Hälsorapport i 
 formatet ÅÅÅÅ-MM (exempelvis: 1950-10).<br/><br/>
 </p>
 {% if messages %}
