Localized text in influenzabar.

--- a/templates/base/sitebase.html
+++ b/templates/base/sitebase.html
@@ -93,7 +93,7 @@
 		
 			<div id="influenzabar">
 				{% block masthead %}
-					<p class="_toggle influenzanet">Influenzanet is a system to monitor the activity of influenza-like-illness (ILI) with the aid of volunteers via the internet</p>
+					<p class="_toggle influenzanet">{% trans "Influenzanet is a system to monitor the activity of influenza-like-illness (ILI) with the aid of volunteers via the internet" %}</p>
 					<div class="_toggle influenzabarcontent" id="top">
 						<div id="epiwork">
 							<a href="http://www.influenzanet.eu/" title="Influenzanet website" rel="external">http://www.influenzanet.eu/</a><br /><br />
