--- a/templates/base/blankbase.html
+++ b/templates/base/blankbase.html
@@ -15,6 +15,7 @@
 
         <link type="text/css" rel="stylesheet" media="all" href="{{ MEDIA_URL }}base/css/default.css" />
         <link type="text/css" rel="stylesheet" media="all" href="/colors.css" />
+        <link type="text/css" rel="stylesheet" media="all" href="{{ MEDIA_URL }}custom/css/custom.css" />
         {% block add_css %}{% endblock add_css %}
         {% block add_js %}{% endblock add_js %}
 
