--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -10,8 +10,13 @@
 <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
 
 <form action="" method="post" id="registration">{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email">{% trans "E-mail address:" %}</label> {{ form.email }}</p>
+{% for field in form %}
+        		<div class="fieldWrapper">
+            	{{ field.label_tag }}{{ field }}
+            	<p class="help-text">{{ field.help_text }}</p>
+            	{{ field.errors }}
+        		</div>
+{% endfor %}
 <p><input type="submit" id="boxsubmit" value="{% trans "Reset my password" %}" /></p>
 </form>
 
