--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -15,6 +15,7 @@
                 {% for field in form %}
         		<div class="fieldWrapper">
             	{{ field.label_tag }}{{ field }}
+            	<p class="help-text">{{ field.help_text }}</p>
             	{{ field.errors }}
         		</div>
     {% endfor %}
