--- a/templates/contact_form/contact_form.html
+++ b/templates/contact_form/contact_form.html
@@ -1,6 +1,11 @@
 {% extends "contact_form/base.html" %}
 {% load cms_tags i18n %}
 
+{% block add_js %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}custom/js/captcha-refresh.js"></script>
+{% endblock add_js %}
+
 {% block col1 %}
 
 {% placeholder "Main content" %}
