--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,6 +3,11 @@
 
 {% block title %}{% trans "Password reset" %}{% endblock %}
 
+{% block add_js %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}custom/js/captcha-refresh.js"></script>
+{% endblock add_js %}
+
 {% block content %}
 
 <h1>{% trans "Password reset" %}</h1>
