--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -4,10 +4,15 @@
 {% block title %}{{ block.super }}: {% trans "Register" %}{% endblock %}
 
 {% comment %}
-{% block add_js %}<script type="text/javascript" src="{{ MEDIA_URL }}base/js/influenzanet.js"></script>{% endblock add_js %}
-
+{% block add_js %} <script type="text/javascript" src="{{ MEDIA_URL }}base/js/influenzanet.js"></script>{% endblock add_js %}
 {% block add_body %} onload="document.getElementsByTagName('input') [1].focus(); forcefancy();"{% endblock add_body %}
 {% endcomment %}
+
+{% block add_js %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}custom/js/captcha-refresh.js"></script>
+{% endblock add_js %}
+
 
 {% block content %}<h1>{% trans "Registration Form" %}</h1>
 {% trans "register" %}
