--- a/media/custom/css/custom.css
+++ b/media/custom/css/custom.css
@@ -72,11 +72,7 @@ textarea.user-field {
 
 /* Registration form */
 .registration-footnote {
-	font-style: italic;
-	margin-top: 0.5em;
-	font-size: 0.9em;
-	line-height: 1.3em;
-	color: #666666;
+	margin-bottom: 1.5em;
 }
 
 /* Captcha */
