Minor text adjustment on profile page

--- a/templates/survey/thanks.html
+++ b/templates/survey/thanks.html
@@ -170,6 +170,7 @@ som varit kan du klicka på Rapportera i tabellen för att ändra dina svar.
     </div>
 </div>
 
+<p><i>Fler kartor kommer framöver.</i></p>
 <!--<p>{% trans "Regions in which we currently have reports of influenza-like illness are red, and ones in which none of our participants currently report influenza-like illness are blue."%}<br>
 <strong>{% trans "Map updated hourly."%}</strong></p>-->
 
