--- a/templates/survey/thanks.html
+++ b/templates/survey/thanks.html
@@ -160,7 +160,7 @@ som varit kan du klicka på Rapportera i tabellen för att ändra dina svar.
 <br/>
 
 <h2>Rapporteringskartor</h2>
-<p>Kartan visar andelen personer i varje län som rapporterat luftvägsinfektion enligt Hälsorapportsystemets automatiska tolkning av symptomen.</p>
+<p>Kartan visar andelen personer i varje län som den senaste veckan rapporterat luftvägsinfektion enligt Hälsorapportsystemets automatiska tolkning av symptomen.</p>
 <p>Kartan kan användas för att följa rapporteringen. Kartan bör inte tolkas som sjukdomsläget, för det behövs mer analyser. Är du nyfiken på sjukdomsläget enligt Hälsorapport kan du kolla på <a href="/sv/resultat/">Hälsorapports resultatsida</a>.</p>
 <p><strong>Vad står färgerna för?</strong><br />Vitt: för lite data. Grön 0-2%, Rosa 3-5%, Ljusblå 6-8%, Lila 9-11%, Orange 12-14%, Röd 15% eller mer.</p>
 
