survey link plugin working

--- a/templates/survey/cms_plugin_survey_list.html
+++ b/templates/survey/cms_plugin_survey_list.html
@@ -1,4 +1,1 @@
-<h3>survey list plugin {{ user_id }}</h3>
-
-
-<p>This is cms_plugin_survey_list.html. Eddit this file and put content here!!!</p>
+<p><a href=/survey/show/intake/?gid={{global_id}} >Intake survey</a></p>
