changed text on link to intake survey to swedish

--- a/templates/survey/cms_plugin_survey_list.html
+++ b/templates/survey/cms_plugin_survey_list.html
@@ -1,1 +1,1 @@
-<p><a href=/survey/show/intake/?gid={{global_id}} >Intake survey</a></p>
+<p><a href=/survey/show/intake/?gid={{global_id}} >Backgrundsenkät</a></p>
