--- a/templates/survey/id_code.html
+++ b/templates/survey/id_code.html
@@ -6,7 +6,7 @@
 <p>
 Tack för att du aktiverat ditt konto i Hälsorapport! Var vänlig fyll i den
 kod som står tryckt på inbjudan. Ange även födelsedatumet på den som bjudits in till Hälsorapport i
-formatet ÅÅÅÅ-MM (exempelvis: 1950-10).<br/><br/>
+formatet ÅÅÅÅ (exempelvis: 1950).<br/><br/>
 </p>
 {% if messages %}
 <ul class="messages">
