--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -4,6 +4,8 @@
 {% block title %}{{ block.super }}: {% trans "Account Activation" %}{% endblock %}
 
 {% block content %}<h1>{% trans "Account Activation" %}</h1>
-                <p>{% trans "Activation is complete." %}</p>
+                <p>Du har nu konfirmerat din e-postadress. Nästa steg är att logga in med ditt användarnamn och lösenord som du valt.</p>
                 <p>&nbsp;</p>
-                <p><a href="/accounts/login/">{% trans "proceed to the login page" %}</a>.</p>{% endblock content %}
+                <p> Därefter fyller du i koden som du har fått i inbjudan samt ditt födelseår.</p>
+                <p>&nbsp;</p>
+                <p><a href="/accounts/login/">Klick här för att logga in.</a>.</p>{% endblock content %}
