--- a/templates/survey/cms_plugin_survey_list.html
+++ b/templates/survey/cms_plugin_survey_list.html
@@ -1,1 +1,20 @@
 <p><a href=/survey/show/intake/?gid={{global_id}} >Bakgrundsenkät</a></p>
+
+Open surveys
+
+
+<ul>
+{% for s in open_surveys %}
+    <li>{{ s.shortname }}</li>
+{% endfor %}
+</ul>
+
+
+
+Replied surveys
+
+<ul>
+{% for s in replied_surveys %}
+    <li>{{ s.shortname }}</li>
+{% endfor %}
+</ul>
